--- a/raddb/radiusd.conf
+++ b/raddb/radiusd.conf
@@ -453,7 +453,7 @@ log {
 	#  The attribute that the value is assigned to is unimportant,
 	#  and should be a "throw-away" attribute with no side effects.
 	#
-	#requests = ${logdir}/radiusd-%{%{Virtual-Server}:-DEFAULT}-%Y%m%d.log
+	requests = ${logdir}/radiusd-%{%{Virtual-Server}:-DEFAULT}-%Y%m%d.log
 
 	#
 	#  Which syslog facility to use, if ${destination} == "syslog"
@@ -481,7 +481,7 @@ log {
 	#
 	#  allowed values: {no, yes}
 	#
-	auth_badpass = no
+	auth_badpass = yes
 	auth_goodpass = no
 
 	#  Log additional text at the end of the "Login OK" messages.
@@ -623,7 +623,7 @@ $INCLUDE clients.conf
 thread pool {
 	#  Number of servers to start initially --- should be a reasonable
 	#  ballpark figure.
-	start_servers = 5
+	start_servers = $ENV{THPOOL_START}
 
 	#  Limit on the total number of servers running.
 	#
@@ -646,7 +646,7 @@ thread pool {
 	#
 	#  For more information, see 'max_request_time', above.
 	#
-	max_servers = 32
+	max_servers = $ENV{THPOOL_MAX}
 
 	#  Server-pool size regulation.  Rather than making you guess
 	#  how many servers you need, FreeRADIUS dynamically adapts to
@@ -660,8 +660,8 @@ thread pool {
 	#  more than max_spare_servers, some of the spares die off.
 	#  The default values are probably OK for most sites.
 	#
-	min_spare_servers = 3
-	max_spare_servers = 10
+	min_spare_servers = $ENV{THPOOL_MINSPARE}
+	max_spare_servers = $ENV{THPOOL_MAXSPARE}
 
 	#  When the server receives a packet, it places it onto an
 	#  internal queue, where the worker threads (configured above)
@@ -689,7 +689,7 @@ thread pool {
 	#
 	#  '0' is a special value meaning 'infinity', or 'the servers never
 	#  exit'
-	max_requests_per_server = 0
+	max_requests_per_server = $ENV{THPOOL_MAXREQPSERVER}
 }
 
 # MODULE CONFIGURATION
